UtahLiveDataTest/src/objects/FundingAccountBudgetCategory__c.object
<CustomObject>
    <description>[Business] Mapping Object for Funding Sources and Budget Categories</description>
    <fields>
        <fullName>AmountAllocated__c</fullName>
        <description>Amount Allocated from Funding Source for each line item of category</description>
        <label>Allocated Amount(Obsolete)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Encumbered Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AvailableAmount__c</fullName>
        <formula>FundingSourceBudgetCategory__r.AllocatedAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <formula>FundingSourceBudgetCategory__r.Name</formula>
        <label>Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>These are External Budget Categories.</description>
        <label>External Budget Category</label>
        <referenceTo>BudgetCategory__c</referenceTo>
        <relationshipLabel>Funding Account Budget Category</relationshipLabel>
        <relationshipName>Funding_Account_Budget_Category</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FundingAccount__c</fullName>
        <label>Funding Account</label>
        <referenceTo>FundingAccount__c</referenceTo>
        <relationshipLabel>Funding Account Budget Category</relationshipLabel>
        <relationshipName>Funding_Account_Budget_Category</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FundingSourceBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Source Budget Category</label>
        <referenceTo>FundingSourceBudgetCategory__c</referenceTo>
        <relationshipLabel>Funding Account Budget Category</relationshipLabel>
        <relationshipName>Funding_Account_Budget_Category</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HideEditDelete__c</fullName>
        <formula>OR(Text( FundingAccount__r.FundingSource__r.Status__c ) = &apos;Active&apos;,Text( FundingAccount__r.FundingSource__r.Status__c ) = &apos;Approved&apos;)</formula>
        <label>HideEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Shows Internal Budget Categories from Pool of Budget Categories.</description>
        <label>Object Code</label>
        <referenceTo>BudgetCategory__c</referenceTo>
        <relationshipLabel>Funding Account Budget Category (Internal Budget Category)</relationshipLabel>
        <relationshipName>Funding_Account_Budget_Category1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ObjectClass__c</fullName>
        <formula>InternalBudgetCategory__r.CategoryCode__c</formula>
        <label>Object Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemainingAmount__c</fullName>
        <formula>IF ( FundingSourceBudgetCategory__r.RemainingAmount__c  == null,0,FundingSourceBudgetCategory__r.RemainingAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Funding Account Budget Category</label>
    <nameField>
        <displayFormat>FABC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Account Budget Category</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AmountCannotbeGreaterThanAllocatedAmount</fullName>
        <active>true</active>
        <description>Amount entered cannot be Greater than Allocated Amount</description>
        <errorConditionFormula>Amount__c  &gt;  AmountAllocated__c</errorConditionFormula>
        <errorMessage>Please Enter Encumbered Amount less than Allocated Amount</errorMessage>
    </validationRules>
</CustomObject>